# slm-honda

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  pyproject.toml  run_fast.txt
.claude/: settings.json  settings.local.json
.claude/rules/: eval.md  training.md
.github/workflows/: ci.yml
configs/: align_dpo.yaml  align_orpo.yaml  base.yaml  dpo.yaml  eval.yaml  sft.yaml  sft_lora.yaml  sft_lora_smoke.yaml  sft_multistage.yaml
configs/baselines/: sft_lora_multi.yaml  sft_lora_single.yaml  sft_qlora_multi.yaml  sft_qlora_single.yaml
data/: README.md
data/gold/: eval_hard.jsonl  gold_test.jsonl
data/holdout/: preference_val.jsonl  val.jsonl
data/samples/: authored_sft.jsonl
data/sft/: authored_sft.jsonl
docs/: BASELINES.md  OOM_LOGITS_VOCAB.md  RUNBOOK.md  RUNBOOK_LADDER_SPEC_CHANGE.md  SPEC.md
notebooks/: smoke_test.ipynb
outputs/eval/: leaderboard.csv  leaderboard.md
outputs/eval/eval_gemma/: per_sample.csv  report.json  report.md
outputs/eval/eval_granite/: per_sample.csv  report.json  report.md
outputs/eval/eval_phi/: per_sample.csv  report.json  report.md
scripts/: compare_baselines.py  compare_models.py  compare_pair.py  evaluate.py  export_model.py  gen_dpo.py  gen_eval.py  gen_sft.py  plot_metrics.py  rag_baseline.py  train_align.py  train_multistage.py  train_sft.py  validate_data.py
src/slm_coach/: __init__.py  config.py  ground_truth.py  model_registry.py  oracle.py  tracking.py
src/slm_coach/data/: __init__.py  formatting.py  loader.py  mixture.py  schema.py
src/slm_coach/datagen/: __init__.py  authored.py  core.py  dpo.py  evalset.py  records.py  sft.py
src/slm_coach/eval/: __init__.py  harness_task.py  headtohead.py  honda.py  inference.py  judge.py  latency.py  metrics.py  rag.py  report.py  rubric.py  runner.py
src/slm_coach/export/: __init__.py  merge.py  quantize.py
src/slm_coach/reporting/: __init__.py  compare.py  plots.py  tables.py
src/slm_coach/training/: __init__.py  align.py  callbacks.py  masking.py  model.py  multistage.py  sft.py
src/slm_coach/utils/: __init__.py  deps.py  logging.py  runtime.py  seed.py
tests/: __init__.py  test_config.py  test_eval_extras.py  test_eval_metrics.py  test_formatting.py  test_honda.py  test_loader.py  test_mixture.py  test_offline_phases.py  test_reporting.py  test_schema.py  test_split.py
