[project]
name = "slm-honda-resolver"
version = "0.1.0"
description = "Generate, fine-tune & evaluate a closed-book Honda Entitlement Resolver SLM (PoC6, multi-model)."
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "FDX SLM Team" }]
keywords = ["llm", "fine-tuning", "qlora", "dpo", "evaluation", "closed-book", "diagnosis", "honda"]

# Core dependencies: cross-platform, torch-free, installable on CPU/Windows.
# Everything Phase-1 (config + data + utils + metrics) needs lives here, so a plain
# `uv sync` followed by `uv run pytest` works with no GPU and no API keys.
dependencies = [
    # config & CLI
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "typer>=0.12,<1.0",
    "rich>=13.7",
    "python-dotenv>=1.0",
    # data handling — transformers/datasets here pull tokenizers + arrow only (no torch)
    "numpy>=1.26,<3",
    "transformers>=5.12,<6",   # Qwen3.5 (model_type qwen3_5) needs native support added in 5.x
    "datasets>=3.0,<5",
    "tenacity>=8.3",
    "streamlit>=1.58.0",
]

[project.optional-dependencies]
# --- GPU training stack. CPU-installable for dry-run; real speed needs CUDA. ---
train = [
    "torch>=2.3",
    # torchvision MUST match torch's CUDA build, else transformers' image_utils import crashes
    # ("PyTorch and torchvision compiled with different CUDA major versions"). Pinned to the same
    # cu128 index as torch below. transformers/unsloth import it even for text-only work.
    "torchvision>=0.20",
    "trl>=0.11",
    "peft>=0.12",
    "accelerate>=0.33",
    "bitsandbytes>=0.43",
    "sentencepiece>=0.2",
    "einops>=0.8",
    "hf_xet>=1.0",
    # Liger fused kernels (use_liger_kernel). Linux+CUDA only (needs triton); skipped on Windows.
    "liger-kernel>=0.5; sys_platform == 'linux'",
]
# --- Linux + CUDA ONLY. Do NOT install on Windows/CPU (no prebuilt wheels). ---
# flash-attn is intentionally EXCLUDED: it needs source compilation and fails/stalls on Blackwell
# (sm_120). Attention defaults to SDPA everywhere (configs set attn_implementation: sdpa), and the
# model loader degrades any flash_attention_2 request to SDPA. Add flash-attn manually only if you
# have a prebuilt wheel for your arch.
gpu = [
    "unsloth>=2025.1",
]
# --- Evaluation: LLM judges (GPT + Gemini), lm-eval harness. ---
eval = [
    "openai>=1.40",
    "google-genai>=0.3",
    "lm-eval>=0.4.3",
    "langdetect>=1.0.9",
]
# --- Export / quantization. autoawq needs CUDA; GGUF needs the llama.cpp tool. ---
export = [
    "autoawq>=0.2",
]
# --- Experiment tracking (Langfuse: qualitative sample-generation logging). ---
# Pinned to the v2 SDK line, whose client API this repo targets.
tracking = [
    "langfuse>=2.40,<3",
]
# --- Metric charts (loss curves, per-mode bars). CSV tables need no extra; PNGs need this. ---
viz = [
    "matplotlib>=3.8",
]

[dependency-groups]
# Installed by default on `uv sync` (uv treats `dev` as a default group).
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "black>=24.4",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
]

# --- PyTorch CUDA build (Windows). RTX 50-series (Blackwell, sm_120) needs cu128+. ---
# Only used on win32 for `torch` (explicit index); other platforms get the default PyPI wheel.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]   # keep torchvision's CUDA matching torch (cu128)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slm_coach"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "D"]
# D203/D213: conflicting docstring rules. UP042: `str, Enum` is the pydantic-friendly idiom
# (StrEnum changes str()/format() semantics), kept intentionally.
ignore = ["D203", "D213", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
# B008: Typer *requires* `typer.Option(...)` in argument defaults — not a real bug here.
"scripts/**" = ["D104", "B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
